# git-ubuntu-operator

./: .licenserc.yaml  README.md  charmcraft.yaml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: integration_test.yaml  publish.yml  test.yaml
src/: charm.py  environment.py  git_ubuntu.py  importer_node.py  launchpad.py  package_configuration.py  package_installation.py  service_management.py  user_management.py
tests/integration/: conftest.py  helpers.py  test-ssh-key  test_charm.py
tests/unit/: test_charm.py  test_environment.py  test_git_ubuntu.py  test_importer_node.py  test_launchpad.py  test_package_configuration.py  test_package_installation.py  test_user_management.py
