# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "git-ubuntu-operator"
version = "1.0.0"
requires-python = ">=3.12"

# Charm code dependencies
dependencies = [
    "charmlibs-apt>=1.0.0",
    "charmlibs-pathops>=1.0.0",
    "ops~=2.17",
]

[dependency-groups]

charmlibs = [
    "charmlibs-apt>=1.0.0",
    "charmlibs-pathops>=1.0.0",
]

format = [
    "black",
    "isort",
]

lint = [
    "mypy",
    "isort",
    "black",
    "flake8-docstrings",
    "flake8-docstrings-complete",
    "flake8-builtins",
    "flake8-test-docs",
    "pep8-naming",
    "codespell",
    "pylint",
    "pyproject-flake8",
    "pydocstyle",
    "types-PyYAML",
]

unit = [
    "pytest",
    "coverage[toml]",
    "ops[testing]",
]

coverage-report = [
    "pytest",
    "coverage[toml]",
    "ops[testing]",
]

static = [
    "pyright",
    "ops[testing]",
]

integration = [
    "pytest",
    "jubilant~=1.0",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

[tool.black]
line-length = 99
target-version = ["py312"]

[tool.flake8]
max-line-length = 99
max-doc-length = 99

# Ignore for compatibility with black
ignore = ["W503", "E501", "TDO002"]

[tool.isort]
line_length = 99
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true

[[tool.mypy.overrides]]
disallow_untyped_defs = false
module = "tests.*"

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src/**.py"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-boolean-expressions",
]
